--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@ hs_err_pid*
 # these rules might exclude image files for figures etc.
 # *.ps
 # *.eps
-# *.pdf
+*.pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
